--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/index.ts",
-    "test": "jest",
+    "test": "npm run test:fast",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:slow": "jest --config jest.config.slow.js",
+    "test:fast": "jest",
+    "test:tmux": "jest --config jest.config.tmux.js",
+    "test:all": "npm run test:fast && npm run test:slow"
   },
   "keywords": [
     "git",
