--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "test:slow": "jest --config jest.config.slow.js",
     "test:fast": "jest",
     "test:tmux": "jest --config jest.config.tmux.js",
-    "test:all": "npm run test:fast && npm run test:slow"
+    "test:all": "npm run test:fast && npm run test:slow",
+    "test:integration": "jest --config jest.config.integration.js",
+    "test:e2e": "jest --config jest.config.e2e.js",
+    "typecheck": "tsc --noEmit",
+    "lint": "echo 'Linting not configured yet'"
   },
   "keywords": [
     "git",
