--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,21 @@
-name: Tests
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [master, main]
   pull_request:
-    branches: [ main, master ]
+    branches: [master, main]
 
 jobs:
-  test:
-    name: Test on ${{ matrix.os }} with Node ${{ matrix.node }}
+  # Main build and test job that runs for all pushes and PRs
+  build-test:
+    name: Build and Test (${{ matrix.os }}, Node ${{ matrix.node }})
     runs-on: ${{ matrix.os }}
     
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node: [18, 20]
+        node: [18, 20, 22]
         include:
           - os: ubuntu-latest
             tmux: true
@@ -23,106 +24,111 @@ jobs:
           - os: windows-latest
             tmux: false
       fail-fast: false
+    
+    outputs:
+      should-release: ${{ steps.check-release.outputs.should-release }}
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Use Node.js ${{ matrix.node }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node }}
-        cache: 'npm'
-    
-    - name: Install tmux (Ubuntu)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y tmux
-    
-    - name: Install tmux (macOS)
-      if: matrix.os == 'macos-latest'
-      run: |
-        brew install tmux
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build
-      run: npm run build
-    
-    - name: Run unit tests
-      run: npm test
-    
-    - name: Run integration tests
-      run: npm run test:integration
-      env:
-        CI: true
-    
-    - name: Run e2e tests
-      run: npm run test:e2e
-      env:
-        CI: true
-        DISABLE_TMUX: ${{ matrix.tmux == false }}
-    
-    - name: Upload coverage
-      if: matrix.os == 'ubuntu-latest' && matrix.node == 20
-      uses: codecov/codecov-action@v3
-      with:
-        files: ./coverage/lcov.info
-        fail_ci_if_error: false
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-  lint:
-    name: Lint and Type Check
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'npm'
+      
+      - name: Install tmux (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y tmux
+      
+      - name: Install tmux (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          brew install tmux
+
+      - name: Install dependencies
+        run: npm ci
+        env:
+          HUSKY: 0
+
+      - name: Run build
+        run: npm run build
+
+      - name: Run lint
+        run: npm run lint
+
+      - name: Run typecheck
+        run: npm run typecheck
+
+      - name: Run unit tests
+        run: npm test
+
+      - name: Run integration tests
+        run: npm run test:integration
+        env:
+          CI: true
+          DISABLE_TMUX: ${{ matrix.tmux == false }}
+
+      - name: Run e2e tests
+        run: npm run test:e2e
+        env:
+          CI: true
+          DISABLE_TMUX: ${{ matrix.tmux == false }}
+
+      - name: Generate coverage
+        if: matrix.os == 'ubuntu-latest' && matrix.node == '20'
+        run: npm run test:coverage
+
+      - name: Upload coverage artifacts
+        if: matrix.os == 'ubuntu-latest' && matrix.node == '20'
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-reports
+          path: coverage/
+          retention-days: 1
+
+      - name: Upload build artifacts
+        if: matrix.os == 'ubuntu-latest' && matrix.node == '20'
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-dist
+          path: dist/
+          retention-days: 1
+
+      - name: Check if release needed
+        id: check-release
+        if: matrix.os == 'ubuntu-latest' && matrix.node == '20'
+        run: |
+          if [[ "${{ github.ref }}" == "refs/heads/master" || "${{ github.ref }}" == "refs/heads/main" ]] && [[ "${{ github.event_name }}" == "push" ]]; then
+            echo "should-release=true" >> $GITHUB_OUTPUT
+          else
+            echo "should-release=false" >> $GITHUB_OUTPUT
+          fi
+
+  # Publish coverage reports
+  coverage:
+    name: Publish Coverage
+    needs: build-test
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Use Node.js 20
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: TypeScript type check
-      run: npm run typecheck
-    
-    - name: ESLint
-      run: npm run lint
-      if: always()
 
-  build-binaries:
-    name: Build binaries
-    runs-on: ubuntu-latest
-    needs: [test, lint]
-    if: github.event_name == 'push'
-    
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Use Node.js 20
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build
-      run: npm run build
-    
-    - name: Package
-      run: |
-        npm pack
-        mkdir -p artifacts
-        mv *.tgz artifacts/
-    
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: npm-package
-        path: artifacts/
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download coverage artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-reports
+          path: coverage/
+
+      - name: Upload to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage/lcov.info
+          fail_ci_if_error: false
