--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "worktree-tool",
   "version": "0.1.0",
-  "description": "Git worktree management tool",
+  "description": "A command-line tool for managing Git worktrees with integrated tmux/shell session management",
   "main": "dist/index.js",
   "bin": {
     "wtt": "./dist/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yourusername/worktree-tool.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/worktree-tool/issues"
+  },
+  "homepage": "https://github.com/yourusername/worktree-tool#readme",
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/index.ts",
@@ -19,7 +27,10 @@
     "test:integration": "jest --config jest.config.integration.js",
     "test:e2e": "jest --config jest.config.e2e.js",
     "typecheck": "tsc --noEmit",
-    "lint": "echo 'Linting not configured yet'"
+    "lint": "eslint src test",
+    "prepare": "husky",
+    "prepublishOnly": "npm run build && npm test",
+    "semantic-release": "semantic-release"
   },
   "keywords": [
     "git",
@@ -27,7 +38,7 @@
     "development",
     "productivity"
   ],
-  "author": "",
+  "author": "Your Name <your.email@example.com>",
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.3.0",
@@ -35,14 +46,33 @@
     "simple-git": "^3.28.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@eslint/js": "^9.32.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.3",
+    "@stylistic/eslint-plugin": "^5.2.2",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "commitizen": "^4.3.1",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^9.32.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^16.3.0",
+    "husky": "^9.1.7",
     "jest": "^29.0.0",
+    "semantic-release": "^24.2.7",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.38.0"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "commitizen": {
+    "path": "./node_modules/cz-conventional-changelog"
   }
 }
