--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "commitizen": {
-    "path": "./node_modules/cz-conventional-changelog"
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
