ci: fix build, take 3

--- a/package.json
+++ b/package.json
@@ -17,15 +17,13 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/index.ts",
-    "test": "npm run test:fast",
+    "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:slow": "jest --config jest.config.slow.js",
-    "test:fast": "jest",
-    "test:tmux": "jest --config jest.config.tmux.js",
-    "test:all": "npm run test:fast && npm run test:slow",
-    "test:integration": "jest --config jest.config.integration.js",
-    "test:e2e": "jest --config jest.config.e2e.js",
+    "test:integration": "jest --config jest.config.slow.js test/integration",
+    "test:e2e": "jest --config jest.config.slow.js test/e2e",
+    "test:all": "npm test && npm run test:slow",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src test",
     "prepare": "husky",
