--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "worktree-tool",
   "version": "0.1.0",
   "description": "A command-line tool for managing Git worktrees with integrated tmux/shell session management",
-  "main": "dist/index.js",
+  "type": "module",
+  "main": "./dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "bin": {
     "wtt": "./dist/index.js"
   },
@@ -15,15 +22,14 @@
   },
   "homepage": "https://github.com/yourusername/worktree-tool#readme",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node src/index.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:slow": "jest --config jest.config.slow.js",
-    "test:integration": "jest --config jest.config.slow.js test/integration",
-    "test:e2e": "jest --config jest.config.slow.js test/e2e",
-    "test:all": "npm test && npm run test:slow",
+    "build": "tsc && node scripts/add-shebang.js",
+    "dev": "tsx src/index.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:integration": "vitest run -c vitest.config.integration.ts",
+    "test:e2e": "vitest run -c vitest.config.e2e.ts",
+    "test:all": "npm test && npm run test:integration && npm run test:e2e",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src test",
     "prepare": "husky",
@@ -39,7 +45,7 @@
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.2",
+    "chalk": "^5.5.0",
     "commander": "^12.0.0",
     "simple-git": "^3.28.0"
   },
@@ -51,8 +57,9 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.3",
     "@stylistic/eslint-plugin": "^5.2.2",
-    "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "@vitest/ui": "^3.2.4",
+    "c8": "^10.1.3",
     "commitizen": "^4.3.1",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -60,12 +67,11 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "jest": "^29.0.0",
     "semantic-release": "^24.2.7",
-    "ts-jest": "^29.0.0",
-    "ts-node": "^10.0.0",
+    "tsx": "^4.20.3",
     "typescript": "^5.0.0",
-    "typescript-eslint": "^8.38.0"
+    "typescript-eslint": "^8.38.0",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
