--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@semantic-release/github": "^11.0.3",
     "@stylistic/eslint-plugin": "^5.2.2",
     "@types/node": "^20.0.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "commitizen": "^4.3.1",
     "conventional-changelog-conventionalcommits": "^9.1.0",
