--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "test:integration": "vitest run -c vitest.config.integration.ts",
     "test:e2e": "vitest run -c vitest.config.e2e.ts",
     "test:all": "npm test && npm run test:integration && npm run test:e2e",
+    "test:ci-local": "./scripts/test-ci-locally.sh",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src test && tsc --noEmit",
     "lint:fix": "eslint src test --fix && tsc --noEmit",
